--- a/src/componenent/Home.css
+++ b/src/componenent/Home.css
@@ -1,10 +1,21 @@
+/* Styles généraux */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+
+/* Banner Section */
 .banner {
   padding: 20px;
   text-align: center;
-  background-image: url("public/1.jpg"); /* Chemin relatif ou absolu */
-  background-size: cover; /* Ou contain, auto, etc. selon vos besoins */
-  background-repeat: no-repeat; /* Pour éviter la répétition de l'image */
-  /* Optionnel: pour centrer l'image */
+  background-image: url("1.jpg"); /* Chemin relatif ou absolu */
+  background-size: cover;
+  background-repeat: no-repeat;
   background-position: center;
   height: 780px;
   display: flex;
@@ -32,39 +43,112 @@
   height: 70px;
   width: 250px;
   margin-top: 30px;
-  &:hover {
-    background-color: hsl(27, 100%, 50%) !important;
-    border-color: hsl(27, 100%, 50%) !important;
-  }
 }
 
+.btn-primary:hover {
+  background-color: hsl(27, 100%, 50%) !important;
+  border-color: hsl(27, 100%, 50%) !important;
+}
+
+/* Container Presentation Section */
 .container-presentation {
-  display: flex; /* Pour aligner les éléments horizontalement */
-  justify-content: space-around; /* Pour espacer les éléments */
+  display: flex;
+  justify-content: space-around;
   background-color: hsla(0, 19%, 92%, 0.808);
   height: 500px;
   align-items: center;
+  flex-wrap: wrap; /* Permet aux éléments de s'empiler sur les petits écrans */
 }
 
-.chef, .horaires, .emplacement {
-  text-align: center; /* Pour centrer le texte */
+.chef,
+.horaires,
+.emplacement {
+  text-align: center;
+  flex-basis: 30%; /* Largeur initiale pour les grands écrans */
+  padding: 20px;
 }
 
-.chef img, .horaires img, .emplacement img {
-  width: 100px; /* Ajustez la taille des images */
+.chef img,
+.horaires img,
+.emplacement img {
+  width: 100px;
   height: 100px;
   margin-bottom: 10px;
 }
 
-.chef h3, .horaires h3, .emplacement h3 {
+.chef h3,
+.horaires h3,
+.emplacement h3 {
   margin-bottom: 5px;
 }
 
+/* Specialities Section */
 .specialite h1 {
-    font-size: 3em;
+  font-size: 3em;
   color: #000000;
   margin: 0;
   font-weight: bold;
   text-align: center;
- margin: 100px;
+  margin: 100px;
+}
+
+/* Media Queries pour petits écrans (smartphones) */
+@media (max-width: 768px) {
+  .banner {
+    height: 500px; /* Réduit la hauteur pour les petits écrans */
+  }
+
+  .banner h1 {
+    font-size: 3em; /* Réduit la taille du texte */
+  }
+
+  .banner p {
+    font-size: 1.2em; /* Réduit la taille du texte */
+  }
+
+  .btn-primary {
+    height: 50px; /* Réduit la taille du bouton */
+    width: 200px;
+  }
+
+  .container-presentation {
+    flex-direction: column; /* Empile les éléments verticalement */
+    height: auto; /* Hauteur automatique */
+  }
+
+  .chef,
+  .horaires,
+  .emplacement {
+    flex-basis: 100%; /* Chaque élément occupe toute la largeur */
+    margin-bottom: 20px;
+  }
+
+  .chef img,
+  .horaires img,
+  .emplacement img {
+    width: 80px; /* Réduit la taille des images */
+    height: 80px;
+  }
+
+  .specialite h1 {
+    font-size: 2em; /* Réduit la taille du texte */
+    margin: 50px; /* Réduit l'espacement */
+  }
+}
+
+/* Media Queries pour tablettes */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .banner {
+    height: 600px; /* Ajuste la hauteur pour les tablettes */
+  }
+
+  .banner h1 {
+    font-size: 3.5em; /* Ajuste la taille du texte */
+  }
+
+  .chef,
+  .horaires,
+  .emplacement {
+    flex-basis: 45%; /* Ajuste la largeur des éléments */
+  }
 }
