--- a/src/componenent/Home.css
+++ b/src/componenent/Home.css
@@ -13,7 +13,7 @@ body {
 .banner {
   padding: 20px;
   text-align: center;
-  background-image: url("1.jpg"); /* Chemin relatif ou absolu */
+  background-image: url("/1.jpg"); /* Chemin relatif ou absolu */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
